[project]
name = "python-general-performance-test-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography==46.0.3",
    "dotenv==0.9.9",
    "openpyxl==3.1.5",
    "pandas==2.3.2",
    "requests>=2.32.5",
    "response>=0.5.0",
    "rich>=14.2.0",
]
